# woundsim

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  review-certificate.md  train_all.py
docs/: mechanistic-claims.md
paper/: references.bib  woundsim.tex
results/: discovery.json  published_calibration.json
scripts/: generate_figures.py  run_published_calibration.py  verify_citation_consistency.py
src/woundsim/: __init__.py
src/woundsim/agents/: __init__.py  heuristic.py  ppo.py  random_agent.py
src/woundsim/benchmarks/: __init__.py  environments.py  runner.py
src/woundsim/envs/: __init__.py  diabetic.py  hbot.py  ischemic.py  macrophage.py  wrappers.py
src/woundsim/models/: __init__.py  flegg.py  inflammation.py  xue_friedman.py  zlobina.py
src/woundsim/training/: __init__.py  configs.py  evaluate.py  train.py
tests/: test_agents.py  test_benchmarks.py  test_citation_consistency_gate.py  test_diabetic.py  test_hbot.py  test_integration.py  test_integrity_audit.py  test_ischemic.py  test_macrophage.py  test_models.py  test_srm_diabetic_extended.py  test_srm_hbot_flegg.py  test_srm_ischemic_xue_friedman.py  test_srm_macrophage_zlobina.py  test_wrappers.py
